added h1 to top of the page
Added an H1 that tells what the page is about and introduces all of the
hellos that follow.

--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
 	<title>Hello Team</title>
 </head>	
 <body>
+	<h1>Everyone says hello</h1>
 <script type="text/javascript">
 
 // Note: Although this code is functionally 'correct' it leaves 
