--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,8 @@
 <head>
 	<script src="bob.js"></script>
 	<script src="elisabeth.js"></script>
+	<script src="christine.js"></script>
+
 	<title>Hello Team</title>
 </head>	
 <body>
@@ -29,6 +31,7 @@ textContent = document.createDocumentFragment();
 // one by one, call all of the functions that add to the text content
 updateText(elisabeth(), textContent);
 updateText(bob(), textContent);
+updateText(christine(), textContent);
 // Note: we need to add more function here for everyone to say hello.
 
 // append the text content to the document
