Add another hello from Linjun

--- a/hello.html
+++ b/hello.html
@@ -2,7 +2,7 @@
 <head>
 	<script src="bob.js"></script>
 	<script src="elisabeth.js"></script>
-	<script type="text/javascript" src="Linjun.js"></script>
+	<script type="text/javascript" src="linjun.js"></script>
 	<title>Hello Team</title>
 </head>	
 <body>
