--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,7 @@
 <head>
 	<script src="bob.js"></script>
 	<script src="elisabeth.js"></script>
+	<script scr="yao.js"></script>
 	<title>Hello Team</title>
 </head>	
 <body>
