hello.html modified

--- a/hello.html
+++ b/hello.html
@@ -30,6 +30,7 @@ textContent = document.createDocumentFragment();
 // one by one, call all of the functions that add to the text content
 updateText(elisabeth(), textContent);
 updateText(bob(), textContent);
+updateText(yao(), textContent);
 // Note: we need to add more function here for everyone to say hello.
 
 // append the text content to the document
