hello.html modified

--- a/hello.html
+++ b/hello.html
@@ -2,7 +2,7 @@
 <head>
 	<script src="bob.js"></script>
 	<script src="elisabeth.js"></script>
-	<script scr="yao.js"></script>
+	<script src="yao.js"></script>
 	<title>Hello Team</title>
 </head>	
 <body>
@@ -30,8 +30,8 @@ textContent = document.createDocumentFragment();
 // one by one, call all of the functions that add to the text content
 updateText(elisabeth(), textContent);
 updateText(bob(), textContent);
-updateText(yao(), textContent);
 // Note: we need to add more function here for everyone to say hello.
+updateText(yao(), textContent);
 
 // append the text content to the document
 document.body.appendChild(textContent);
