--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,7 @@
 <head>
 	<script src="bob.js"></script>
 	<script src="elisabeth.js"></script>
+	<script src="yourname.js"></script>
 	<title>Hello Team</title>
 </head>	
 <body>
@@ -33,6 +34,9 @@ updateText(bob(), textContent);
 
 // append the text content to the document
 document.body.appendChild(textContent);
+
+yourname();
+
 
 </script>
 </body>
