--- a/hello.html
+++ b/hello.html
@@ -16,6 +16,9 @@
 // It turns the string into a paragraph and appends the paragraph 
 // to the pre-defined document fragment, updating this document
 // fragment as a side effect!  
+
+
+//Test
 function updateText( string, docFragment ) {
 	var p, t;
 	
@@ -25,6 +28,7 @@ function updateText( string, docFragment ) {
 	docFragment.appendChild(p);
 }
 
+//Comit
 // textContent will be used to hold the paragraphs for page's content
 textContent = document.createDocumentFragment();
 
