two committs combined

--- a/hello.html
+++ b/hello.html
@@ -3,7 +3,7 @@
 	<script src="bob.js"></script>
 	<script src="elisabeth.js"></script>
 	<script src="yuchen.js"></script>
-	<title>Hello Team</title>
+	<title>Hello WebLabUX Team</title>
 </head>	
 <body>
 <script type="text/javascript">
