--- a/hello.html
+++ b/hello.html
@@ -39,7 +39,7 @@ updateText(portia(), textContent);
 document.body.appendChild(textContent);
 
 </script>
-I put text here
+I love writing text
 </body>
 </html>	
 		
