sam first commits

--- a/hello.html
+++ b/hello.html
@@ -3,6 +3,7 @@
 	<script src="bob.js"></script>
 	<script src="elisabeth.js"></script>
     <script src="robert.js"></script>
+    <script src="samzhao.js"></script>
 	<title>Hello Team</title>
 </head>	
 <body>
@@ -32,6 +33,7 @@ updateText(elisabeth(), textContent);
 updateText(bob(), textContent);
 updateText(robert(), textContent);
 // Note: we need to add more function here for everyone to say hello.
+updateText(samzhao(), textContent);
 
 // append the text content to the document
 document.body.appendChild(textContent);
