--- a/hello.html
+++ b/hello.html
@@ -3,6 +3,7 @@
 	<script src="bob.js"></script>
 	<script src="elisabeth.js"></script>
     <script src="robert.js"></script>
+    <script src="chris.js"></script>
 	<title>Hello Team</title>
 </head>	
 <body>
@@ -31,6 +32,7 @@ textContent = document.createDocumentFragment();
 updateText(elisabeth(), textContent);
 updateText(bob(), textContent);
 updateText(robert(), textContent);
+updateText(chris(), textContent);
 // Note: we need to add more function here for everyone to say hello.
 
 // append the text content to the document
