--- a/hello.html
+++ b/hello.html
@@ -31,6 +31,7 @@ textContent = document.createDocumentFragment();
 updateText(elisabeth(), textContent);
 updateText(bob(), textContent);
 updateText(robert(), textContent);
+updateText(alan(), textContent);
 // Note: we need to add more function here for everyone to say hello.
 
 // append the text content to the document
