--- a/hello.html
+++ b/hello.html
@@ -2,7 +2,8 @@
 <head>
 	<script src="bob.js"></script>
 	<script src="elisabeth.js"></script>
-    <script src="robert.js"></script>
+    	<script src="robert.js"></script>
+    	<script src="yuming.js"></script>
 	<title>Hello Team</title>
 </head>	
 <body>
