--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,7 @@
 	<script src="elisabeth.js"></script>
     <script src="robert.js"></script>
     <script src="alan.js"></script>
+    <script src="korn.js"></script>
 	<title>Hello Team</title>
 </head>	
 <body>
